# luca

./: .env.example  .gitignore  CLAUDE.md  project.md  pyproject.toml  tasks.md
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  VoiceSession.tsx  styles.css
curriculum/: dag.json
curriculum/concepts/: _template.json
data/: curriculum.json
docker/: docker-compose.yml
scripts/: generate_fillers.py  seed_curriculum.py
src/luca/: __init__.py  bot.py  bot_runner.py
src/luca/curriculum/: __init__.py  engine.py  loader.py  models.py  session_planner.py
src/luca/persistence/: __init__.py  database.py  models.py  student_store.py
src/luca/pipeline/: __init__.py  filler_engine.py  frames.py  off_script.py  orchestrator.py  pattern_matcher.py  streaming_tts.py  tts_relay.py
src/luca/student/: __init__.py  bkt.py  error_tracker.py  model.py  session_state.py  teaching_brief.py  triggers.py
src/luca/tutor/: __init__.py  agent.py  context_builder.py  context_format.py
src/luca/tutor/prompts/: __init__.py  few_shot_examples.py  system_prompt.py
src/luca/utils/: config.py  logging.py
tests/: __init__.py  conftest.py  test_bkt.py  test_bkt_decay.py  test_config.py  test_curriculum_engine.py  test_error_tracker.py  test_filler_engine.py  test_pattern_matcher.py  test_streaming_tts.py  test_student_model_integration.py  test_t2_integration.py  test_t9_orchestrator.py  test_triggers.py  test_tutor_prompts.py
